--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"short_name":"Roots Fitness","name":"Roots Fitness Club","icons":[{"src":"/assets/img/cover.png","type":"image/png","sizes":"3500x1440"},{"src":"/assets/img/isolated-layout.svg","type":"image/svg+xml","sizes":"150x150"}],"display":"fullscreen","orientation":"portrait"}
+{"short_name":"Roots Fitness","name":"Roots Fitness Club","icons":[{"src":"/assets/img/cover.png","type":"image/png","sizes":"3500x1440"},{"src":"/assets/img/isolated-layout.svg","type":"image/svg+xml","sizes":"150x150"}],"start_url":"rootsfitnessclub.me","display":"fullscreen","orientation":"portrait"}
